<resources>
    <string name="app_name">Betting</string>
    <string name="cant_find_player">We can\'t find this player. Check the spelling or try another name</string>
    <string name="no_internet_connection">No internet connection is found.\nPull to refresh.</string>
    <string name="no_favorite_player">You don’t have favorite players yet. You Discover section to find players you like.</string>
    <string name="discover">Discover</string>
    <string name="search_for_player">Search for a player…</string>
    <string name="search_result">Search result</string>
    <string name="favorites">Favorites</string>
    <string name="see_more">See more</string>
    <string name="back">Back</string>
    <string name="age">Age</string>
    <string name="birth_day">Birth Day</string>
    <string name="birth_place">Birth Place</string>
    <string name="birth_country">Birth country</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="team">Team</string>
    <string name="league">League</string>
    <string name="country">Country</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_app">Share app</string>
    <string name="rate_app_on_play_market">Rate app on Play Market</string>
    <string name="player_insights_redefined">Player Insights Redefined:</string>
    <string name="introduction">Dive into a World of Stats and Inf1o with Our Football App. Elevate your football experience and gain a deeper understanding of the game\'s dynamics. Get ready to explore the stats th7at shape legends!</string>
    <string name="start">Start</string>
</resources>